# sem4_netverksprog

./: .gitignore
oving1/: Cargo.toml  index.html  readme.md  start.html
oving1/src/: lib.rs
oving1/src/lib/multithreaded_tcp_server/: Calculator.rs  ThreadPool.rs  lib.rs
oving2/: Cargo.toml  readme.md
oving2/SSL/: .rnd  Cargo.toml  keyStore.p12  localhost.crt  localhost.key  myCertificate.crt  myPrivateKey.pem
oving2/SSL/src/lib/multithreaded_tcp_server/: lib.rs
oving2/src/lib/udp_server/: lib.rs
oving3/: Cargo.toml  readme.md
oving3/src/: main.rs  threadpool.rs
oving4/: Cargo.toml  readme.md
oving4/src/: main.rs
oving5/: docker-compose.yml  readme.md
oving5/backend/code-execution-engine/: Dockerfile
oving5/backend/code-execution-engine-api/: Cargo.toml  Dockerfile  run.sh
oving5/backend/code-execution-engine-api/engine/: Dockerfile  docker-compose.yml  run.sh  test1.sh
oving5/backend/code-execution-engine-api/engine/temp/: python.py
oving5/backend/code-execution-engine-api/src/: compilers.rs  main.rs
oving5/frontend/code-execution-frontend/: Dockerfile  package-lock.json  package.json
oving5/frontend/code-execution-frontend/src/: App.tsx
oving6/web-socket-client/: package-lock.json  package.json
oving6/web-socket-server/: Cargo.toml  readme.md
oving6/web-socket-server/src/: main.rs
