[package]
name = "web-socket-server"
version = "0.1.0"
authors = ["Sigmund Granaas <sigmundsgranaas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.3"
httparse = "1.3.5"
sha-1 = "0.9.4"
base64 = "0.13.0"
pub-sub = "2.0.0"
tokio = { version = "1.3.0", features = ["full", "tracing", "net", "macros"] }
tokio-util = { version = "0.6.3", features = ["full"] }
tokio-stream = { version = "0.1" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = { version = "0.3.0", features = ["thread-pool"]}
